manifests/platform/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kubeflow-gateway
  namespace: kubeflow
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - kubeflow.aaw.cloud.statcan.ca
    port:
      name: http
      number: 80
      protocol: HTTP
    ## Upgrade HTTP to HTTPS
    #tls:
    #  httpsRedirect: true
